--- a/dashboard.yaml
+++ b/dashboard.yaml
@@ -13,18 +13,18 @@ cards:
     variables:
       ulm_custom_card_weathercard_city: "Örsundsbro"
       ulm_custom_card_weathercard_area: "Enköping"
-      ulm_custom_card_weathercard_bgimage_clear-night: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_cloudy: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_fog: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_hail: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_lightning: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_lightning-rainy: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_partlycloudy: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_pouring: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_rainy: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_snowy: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_snowy-rainy: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_sunny: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_windy: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_windy-variant: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
-      ulm_custom_card_weathercard_bgimage_exceptional: center / cover no-repeat url("/local/images/weather_card_winter_night.jpg")
+      ulm_custom_card_weathercard_bgimage_clearnight: center / cover no-repeat url("https://i.picsum.photos/id/166/1280/720.jpg?hmac=w7NFsk0bL2IjWSdLJy0Ymow0MFw6n2BCjPYhJCgEjXs")
+      ulm_custom_card_weathercard_bgimage_cloudy: center / cover no-repeat url("https://i.picsum.photos/id/166/1280/720.jpg?hmac=w7NFsk0bL2IjWSdLJy0Ymow0MFw6n2BCjPYhJCgEjXs")
+      ulm_custom_card_weathercard_bgimage_fog: center / cover no-repeat url("https://i.picsum.photos/id/166/1280/720.jpg?hmac=w7NFsk0bL2IjWSdLJy0Ymow0MFw6n2BCjPYhJCgEjXs")
+      ulm_custom_card_weathercard_bgimage_hail: center / cover no-repeat url("https://i.picsum.photos/id/166/1280/720.jpg?hmac=w7NFsk0bL2IjWSdLJy0Ymow0MFw6n2BCjPYhJCgEjXs")
+      ulm_custom_card_weathercard_bgimage_lightning: center / cover no-repeat url("https://i.picsum.photos/id/166/1280/720.jpg?hmac=w7NFsk0bL2IjWSdLJy0Ymow0MFw6n2BCjPYhJCgEjXs")
+      ulm_custom_card_weathercard_bgimage_lightningrainy: center / cover no-repeat url("https://i.picsum.photos/id/83/2560/1920.jpg?hmac=LFdAxfpbYKs0hZr0LhHVWyqXarWGg7FtM8pIzJPBc0w")
+      ulm_custom_card_weathercard_bgimage_partlycloudy: center / cover no-repeat url("https://i.picsum.photos/id/62/2000/1333.jpg?hmac=PbFIn8k0AndjiUwpOJcfHz2h-wPCQi_vJRTJZPdr6kQ")
+      ulm_custom_card_weathercard_bgimage_pouring: center / cover no-repeat url("https://i.picsum.photos/id/115/1500/1000.jpg?hmac=PMXoKzYeiUr1yKbfihqGHtqnlsmR_OvIofWF0MxvQRQ")
+      ulm_custom_card_weathercard_bgimage_rainy: center / cover no-repeat url("https://i.picsum.photos/id/115/1500/1000.jpg?hmac=PMXoKzYeiUr1yKbfihqGHtqnlsmR_OvIofWF0MxvQRQ")
+      ulm_custom_card_weathercard_bgimage_snowy: center / cover no-repeat url("https://i.picsum.photos/id/135/2560/1920.jpg?hmac=MAh0eBIqBNEgND6D2vgcIBIQ4BE1jzewN1QQWDfBBEY")
+      ulm_custom_card_weathercard_bgimage_snowyrainy: center / cover no-repeat url("https://i.picsum.photos/id/135/2560/1920.jpg?hmac=MAh0eBIqBNEgND6D2vgcIBIQ4BE1jzewN1QQWDfBBEY")
+      ulm_custom_card_weathercard_bgimage_sunny: center / cover no-repeat url("https://i.picsum.photos/id/116/3504/2336.jpg?hmac=C46vgpj3R407e8pCyy8NhIsNaBZCjb4r5d71keNgMJY")
+      ulm_custom_card_weathercard_bgimage_windy: center / cover no-repeat url("https://i.picsum.photos/id/116/3504/2336.jpg?hmac=C46vgpj3R407e8pCyy8NhIsNaBZCjb4r5d71keNgMJY")
+      ulm_custom_card_weathercard_bgimage_windyvariant: center / cover no-repeat url("https://i.picsum.photos/id/114/3264/2448.jpg?hmac=DOmBAsmlq14qncJF_8kOc4zPjtJtVBqmymXphtNHPOA")
+      ulm_custom_card_weathercard_bgimage_exceptional: center / cover no-repeat url("https://i.picsum.photos/id/114/3264/2448.jpg?hmac=DOmBAsmlq14qncJF_8kOc4zPjtJtVBqmymXphtNHPOA")
